--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .App {
   background-color: white;
 }
@@ -37,4 +36,16 @@ label {
   font-size: 14px;
   font-weight: 600;
   color: rgb(34, 34, 34);
+}
+.homeparent{
+
+  margin: 5px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.homeparent img{
+  width: 50%;
+  height: 60%;
 }
