--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
-.App {
-  background-color: white;
+body{
+  background-color: wheat;
+  /* width: 80%; */
 }
-
 .Auth-form-container {
   display: flex;
   justify-content: center;
@@ -36,16 +36,55 @@ label {
   font-size: 14px;
   font-weight: 600;
   color: rgb(34, 34, 34);
-}
-.homeparent{
 
-  margin: 5px;
-  padding: 0px;
-  display: flex;
-  flex-direction: column;
+}
+
+
+.homeparent{
+  margin: auto;
+  width: 80%;
+  padding-top: 60px;
+  width: 80%;
+  /* display: flex; */
+  text-align: center;
+  justify-content: space-between;
 }
 
 .homeparent img{
+  
   width: 50%;
   height: 60%;
+  float: left;
+  padding-top: 40px;
+  
+}
+.homeparent h1{
+  
+  font-size:80px;
+  font-family: 'Poppins', sans-serif;
+
+}
+
+.navbar{
+  background-color: rgba(6, 106, 188, 0);
+  border-bottom: ridge;
+  margin: auto;
+  width: 80%;
+  
+}
+
+.navbar a{
+  padding:30px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+  font-weight: 600;
+  align-items: center;
+}
+
+button{
+  background: rgb(255, 0, 111);
+  border-radius: 5px ;
+  margin-right: 10px;
 }
