--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Prompt&display=swap');
+
+* {
+  font-family: 'Prompt', sans-serif;
+}
+
+body {
   background-color: rgb(249, 237, 216);
 }
+
 .Auth-form-container {
   display: flex;
   justify-content: center;
@@ -39,7 +46,7 @@ label {
 }
 
 
-.homeparent{
+.homeparent {
   margin: auto;
   width: 80%;
   padding-top: 60px;
@@ -49,23 +56,23 @@ label {
   justify-content: space-between;
 }
 
-.homeparent h1{
-  
-  font-size:60px;
+.homeparent h1 {
+
+  font-size: 60px;
   font-family: 'Poppins', sans-serif;
 
 }
 
-.navbar{
+.navbar {
   background-color: rgba(6, 106, 188, 0);
   border-bottom: ridge;
   margin: auto;
   width: 90%;
-  
+
 }
 
-.navbar a{
-  padding:30px;
+.navbar a {
+  padding: 30px;
   text-decoration: none;
   color: black;
   font-size: 20px;
@@ -73,12 +80,13 @@ label {
   font-weight: 600;
   align-items: center;
 }
-.navbar h2{
+
+.navbar h2 {
   color: black;
   font-weight: 600;
 }
 
-button{
+button {
   background: rgb(241, 24, 104);
   border-radius: 5px 25px;
   margin-right: 10px;
@@ -87,25 +95,139 @@ button{
 }
 
 .page {
-    display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
 }
-.page img{
+
+.page img {
   height: 500px;
   width: 500px;
   border-radius: 5px 90px;
 
 }
-.page ul{
+
+.page ul {
   list-style: none;
   justify-content: space-between;
   /* display: flex; */
   padding: 30px;
 }
-.page ul li{
+
+.page ul li {
   display: flex;
   display: inline;
   padding: 14px;
+}
+
+
+
+/* Lecturer ============================================================ */
+#lecturer {
+  border: thin solid black;
+  width: 100%;
+  height: 45.3vw;
+  margin-bottom: 1vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#lecturer>* {
+  border: thin solid black;
+}
+
+#lecturer>aside {
+  width: 25%;
+  height: 100%;
+
+}
+
+#lecturer>section {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#lecturer>section>ul,
+#lecturer>section>span {
+  width: 98%;
+  border: thin solid black;
+
+}
+
+#lecturer>section>span {
+  height: 12%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#lecturer>section>ul {
+  height: 40%;
+}
+
+#lecturer>section>span>span {
+  font-size: 2.5vw;
+  font-weight: 300;
+  letter-spacing: .2vw;
+}
+
+#lecturer form {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 40%;
+  height: 70%;
+  font-size: 1.7vw;
+  border: thin solid #FF033E;
+  border-radius: 1vw;
+
+}
+
+#lecturer input {
+  width: 60%;
+  height: 100%;
+  text-align: center;
+  font-size: 1.5vw;
+  border: thin solid transparent;
+  border-top-left-radius: inherit;
+  border-bottom-left-radius: inherit;
+
+}
+
+input:focus {
+  outline: none;
+}
+
+#lecturer form button {
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
+  width: 40%;
+  height: 100%;
+  font-size: 1.5vw;
+  border: thin solid transparent;
+  background-color: #FF033E;
+  color: #ffffff;
+}
+
+#lecturer>section>button {
+  width: 25%;
+  height: 6%;
+  font-size: 1.7vw;
+  background-color: #FF033E;
+  border: thin solid #FF033E;
+  border-radius: 2vw;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
