--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,72 @@
   font-family: 'Prompt', sans-serif;
 }
 
+
+/* Navigation bar ========================================================== */
+
+.navbar {
+  background-color: rgba(6, 106, 188, 0);
+  width: 100%;
+  height: 5vw;
+  font-size: 1.8vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: .3vw solid grey;
+}
+
+.navbar>a {
+  text-decoration: none;
+  color: black;
+}
+
+.navbar>a:hover {
+  color: black;
+  text-decoration: overline;
+
+}
+
+.navbar>span {
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 3vw;
+  font-weight: 800;
+  letter-spacing: .3vw;
+}
+
+.navbar>button {
+  width: 14%;
+  height: 80%;
+  color: white;
+  border: thin solid transparent;
+  background-color: #FF033E;
+  border-top-right-radius: 2vw;
+  border-bottom-left-radius: 2vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.navbar>button>a {
+  color: white;
+  font-size: 2vw;
+  letter-spacing: .2vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.navbar>button>a :hover {
+  text-decoration: none;
+}
+
 body {
   background-color: rgb(249, 237, 216);
 }
@@ -61,29 +127,6 @@ label {
   font-size: 60px;
   font-family: 'Poppins', sans-serif;
 
-}
-
-.navbar {
-  background-color: rgba(6, 106, 188, 0);
-  border-bottom: ridge;
-  margin: auto;
-  width: 90%;
-
-}
-
-.navbar a {
-  padding: 30px;
-  text-decoration: none;
-  color: black;
-  font-size: 20px;
-  text-align: center;
-  font-weight: 600;
-  align-items: center;
-}
-
-.navbar h2 {
-  color: black;
-  font-weight: 600;
 }
 
 button {
