--- a/src/App.css
+++ b/src/App.css
@@ -129,13 +129,13 @@ label {
 
 }
 
-button {
+/* button {
   background: rgb(241, 24, 104);
   border-radius: 5px 25px;
   margin-right: 10px;
   height: 70px;
 
-}
+} */
 
 .page {
   display: flex;
@@ -195,4 +195,56 @@ button {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+}
+
+/* courses */
+#courses {
+  width: 100%;
+  height: 50%;
+  border: thin solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#courses>* {
+  border: thin solid black;
+}
+
+#courses>.title {
+  width: 100%;
+  height: 15%;
+}
+
+#courses>.course_list {
+  width: 100%;
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#courses>.course_list>.view_button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 1.7vw;
+  font-weight: bold;
+  letter-spacing: .2vw;
+  border-radius: 2vw;
+  width: 25%;
+  height: 15%;
+  border: thin solid transparent;
+  background-color: #FF033E;
+  color: white;
+}
+
+/* students */
+#students {
+  width: 100%;
+  height: 50%;
+  border: thin solid black;
 }
