--- a/src/App.css
+++ b/src/App.css
@@ -302,8 +302,104 @@ input:focus {
 }
 
 /* students */
+
 #students {
   width: 100%;
   height: 50%;
   border: thin solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#students>* {
+  border: thin solid black;
+}
+
+#students>.title {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#students>.title>span {
+  margin-left: .5vw;
+  font-size: 3vw;
+  font-weight: 700;
+  letter-spacing: .2vw;
+}
+
+
+#students>.title>form {
+  text-align: center;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 40%;
+  height: 90%;
+  font-size: 1.5vw;
+  border: #FF033E .2vw solid;
+}
+
+#students>.title>form>input {
+  width: 70%;
+  height: 100%;
+  border: #FF033E .2vw solid;
+  text-align: center;
+
+
+}
+
+input:focus {
+  outline: none;
+}
+
+#students>.title>form>button {
+  width: 30%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  border: none;
+  background-color: #FF033E;
+  color: white;
+
+}
+
+#students>.student_list {
+  width: 100%;
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.student_item {
+  width: 95%;
+  height: 25%;
+  border: thin solid black;
+}
+
+#students>.student_list>.view_button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-size: 1.7vw;
+  font-weight: bold;
+  letter-spacing: .2vw;
+  border-radius: 2vw;
+  width: 25%;
+  height: 15%;
+  border: thin solid transparent;
+  background-color: #FF033E;
+  color: white;
 }
