--- a/src/App.css
+++ b/src/App.css
@@ -201,15 +201,16 @@ label {
 #courses {
   width: 100%;
   height: 50%;
-  border: thin solid black;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
-#courses>* {
-  border: thin solid black;
+.course_item,
+.student_item {
+  box-shadow: .1vw .1vw .5vw grey;
 }
 
 #courses>.title {
@@ -281,7 +282,7 @@ input:focus {
 .course_item {
   width: 95%;
   height: 25%;
-  border: thin solid black;
+
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -289,9 +290,6 @@ input:focus {
   background-color: #f9edd8;
 }
 
-.course_item>* {
-  border: thin solid black;
-}
 
 .course_item>img {
   width: 15%;
@@ -317,13 +315,14 @@ input:focus {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border: thin solid black;
+
   overflow: hidden;
 }
 
 .course_item>span>.pppp {
   font-size: 1.5vw;
 }
+
 
 .course_item>button {
   font-size: 1.5vw;
@@ -360,16 +359,13 @@ input:focus {
 #students {
   width: 100%;
   height: 50%;
-  border: thin solid black;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
-#students>* {
-  border: thin solid black;
-}
 
 #students>.title {
   width: 100%;
@@ -438,7 +434,7 @@ input:focus {
 .student_item {
   width: 95%;
   height: 25%;
-  border: thin solid black;
+
   display: flex;
   flex-direction: row;
   align-items: flex-end;
@@ -446,9 +442,6 @@ input:focus {
   background-color: #f9edd8;
 }
 
-.student_item>* {
-  border: thin solid black;
-}
 
 .student_item>img {
   width: 15%;
@@ -474,7 +467,7 @@ input:focus {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border: thin solid black;
+
   overflow: hidden;
 }
 
