--- a/src/App.css
+++ b/src/App.css
@@ -397,19 +397,16 @@ label {
 /* Lecturer  section ==================================================== */
 
 #lecturer {
-  border: thin solid black;
   width: 100%;
   height: 55.3vw;
   margin-bottom: 1vw;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
 }
 
-#lecturer>* {
-  border: thin solid black;
-}
+
 
 #lecturer>aside {
   width: 25%;
