--- a/src/components/students/student.css
+++ b/src/components/students/student.css
@@ -39,6 +39,10 @@
     background-color: white;
     border-radius: .5vw;
     box-shadow: rgb(0 0 0 / 16%) 1px 1px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
 
 }
 
