manipulate lecture tree

--- a/src/components/students/student.css
+++ b/src/components/students/student.css
@@ -116,7 +116,7 @@
     margin-top: .5vw;
 }
 
-#lecturer {
+#details #lecturer {
     margin-top: .5vw;
     border-radius: .5vw;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
