--- a/src/components/Lecturers/lec.css
+++ b/src/components/Lecturers/lec.css
@@ -4,7 +4,7 @@
     border: thin solid black;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
 
 }
