--- a/src/components/Lecturers/lec.css
+++ b/src/components/Lecturers/lec.css
@@ -19,6 +19,7 @@
 }
 
 .aside1>* {
+    padding-left: .5vw;
     width: 90%;
     height: 17%;
     border-radius: .3vw;
@@ -27,7 +28,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 
 }
 
